fix lifes on ie

--- a/packages/@coorpacademy-components/src/atom/life/style.css
+++ b/packages/@coorpacademy-components/src/atom/life/style.css
@@ -18,7 +18,7 @@
   position: absolute;
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-content: top;
   align-items: center;
   font-size: 22px;
   font-family: 'Open Sans';
@@ -27,7 +27,7 @@
   right: 0;
   width: 67px;
   height: 67px;
-  line-height: 0;
+  line-height: 67px;
   overflow: hidden;
 }
 
@@ -48,8 +48,8 @@
 }
 
 @keyframes hidePreviousLivesCounter {
-  0% { margin-top: 100%; }
-  75% { margin-top: 100%; }
+  0% { margin-top: 0%; }
+  75% { margin-top: 0%; }
   85% { margin-top: -100%; }
   100% { margin-top: -100%; }
 }
@@ -72,12 +72,12 @@
 
 .livesCounterDefault {
   composes: counterValue;
-  margin-top: 100%;
+  margin-top: 0%;
 }
 
 .livesCounterFail {
   composes: counterValue;
-  margin-top: 100%;
+  margin-top: 0%;
 }
 
 @keyframes shakeHeart {
@@ -216,6 +216,7 @@
   width: 42px;
   height: 42px;
   font-size: 16px;
+  line-height: 42px;
 }
 
 .small .multiplierText {
